# MAS

./: .gitignore  MAS.txt  readme.md
mas-production-system/services/core/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.dev.simple  check-deps.py  constraints.txt  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-fixed.txt  requirements-minimal.txt  requirements.txt  test-deps.sh
mas-production-system/services/core/src/: alembic.ini  apply_all_fixes.py  auth.py  cache.py  clean_llm_service.py  comprehensive_bdi_fix.py  config.py  config_loader.py  create_real_library_swarm.py  demo_fixed_swarm.py  demo_rest_api_generation.py  demo_swarm_complete.py  demo_swarm_with_tasks.py  demo_unified_swarm_code_gen.py  fix_autonomous_agent_errors.py  fix_bdi_syntax.py  fix_llm_service_syntax.py  fix_remaining_errors.py  fix_swarm_errors.py  fix_swarm_library_generation.py  fix_swarm_mas_unified_complete.py  fix_swarm_task_execution.py  fix_unified_swarm_execution.py  main.py  message_broker.py  monitoring.py  swarm_demo_final.py  swarm_mas_production.py  swarm_mas_production_enhanced.py  swarm_mas_production_ready.py  swarm_mas_simple_demo.py  swarm_mas_unified.py  swarm_mas_unified_enhanced.py  swarm_mas_unified_fixed.py  swarm_mas_unified_patched.py  test_autonomous_calculator.py  test_autonomous_fixes.py  test_basic_fixed.py  test_code_generation.py  test_final_unified_swarm.py  (+9 more)
mas-production-system/services/core/src/agents/: __init__.py  agent_factory.py  autonomous_integrated.py  templates.py
mas-production-system/services/core/src/agents/types/: hybrid_agent.py  hybrid_agent_improved.py  reflexive_agent.py
mas-production-system/services/core/src/alembic/versions/: 001_initial_schema.py  002_update_task_model.py
mas-production-system/services/core/src/api/: __init__.py  agents.py  agents_old.py  dependencies.py
mas-production-system/services/core/src/api/v1/: __init__.py
mas-production-system/services/core/src/core/: security.py
mas-production-system/services/core/src/core/agents/: __init__.py  base_agent.py  base_agent.py.backup_bdi  base_agent.py.backup_bdi_fix  cognitive_agent.py  hybrid_agent.py  (+3 more)
mas-production-system/services/core/src/database/: __init__.py  models.py
mas-production-system/services/core/src/middleware/: __init__.py  security.py
mas-production-system/services/core/src/schemas/: agents.py  auth.py  messages.py  tasks.py
mas-production-system/services/core/src/services/: agent_service.py  embedding_service.py  enhanced_task_executor.py  llm_service.py  llm_service.py.backup_json  llm_service.py.backup_truncation  llm_service_improved.py  message_delivery.py  tool_service.py
mas-production-system/services/core/src/tools/: __init__.py  base_tool.py  code_tool.py  coding_tools.py  database_tool.py  filesystem_tool.py  http_tool.py  web_search_tool.py
mas-production-system/services/core/src/utils/: logger.py  pagination.py
mas-production-system/services/core/tests/: test_auth.py
mas-production-system/services/core/tests/integration/: test_api.py  test_database.py
mas-production-system/services/core/tests/unit/: test_agents.py  test_config.py
(+292 files in other folders)
